<resources>
    <string name="app_name">Allure Spa</string>
    <string name="spa_name">Allure Spa</string>
    <string name="onboarding_des_1">Allure Spa sẽ đưa làn da về đúng với thời điểm cấu trúc khỏe mạnh nhất</string>
    <string name="onboarding_des_2">Vẻ đẹp bền vững là sự hội tụ hoàn hảo từ ba yếu tố: \\nNgoại hình - Trí tuệ - Tinh thần.</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="welcome_des">Allure Spa sẽ đưa làn da về đúng với thời điểm cấu trúc khỏe mạnh nhất</string>
    <string name="login">Đăng nhập</string>
    <string name="login_now">Đăng nhập ngay</string>
    <string name="start_now">Bắt đầu ngay</string>
    <string name="or">hoặc</string>
    <string name="login_via_google">Đăng nhập với Google</string>
    <string name="logo">Logo</string>
    <string name="enter_phone_number">Nhập số điện thoại</string>
    <string name="not_now">Chưa phải bây giờ</string>
    <string name="nhan_ma_otp">Nhận mã OTP</string>
    <string name="search">Tìm kiếm</string>
    <string name="home">Trang chủ</string>
    <string name="notifications">Thông báo</string>
    <string name="profile">Hồ sơ</string>
    <string name="search_hint">Tìm kiếm...</string>
    <string name="menu">Menu</string>
    <string name="cart">Giỏ hàng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction">Giới thiệu</string>
    <string name="service">Dịch vụ</string>
    <string name="san_pham_doc_quyen">Sản phẩm độc quyền</string>
    <string name="san_pham_may_moc">Sản phẩm máy móc</string>
    <string name="voucher">Voucher</string>
    <string name="course">Khoá học Spa</string>
    <string name="news">Tin tức</string>
    <string name="contact">Liên hệ</string>
    <string name="banner">Banner</string>
    <string name="popular_service">Dịch vụ nổi bật</string>
    <string name="see_more">Xem thêm</string>
    <string name="popular_product">Sản phẩm nổi bật</string>
    <string name="best_seller">Sản phẩm bán chạy</string>
    <string name="account_info">Thông tin tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="account">Tài khoản</string>
    <string name="search_caps">TÌM KIẾM</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="description">Mô tả</string>
    <string name="title">Tiêu đề</string>
    <string name="go_back">Trở lại</string>
    <string name="notification_caps">THÔNG BÁO</string>
    <string name="sign_up">Đăng ký</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="password_not_match">Mật khẩu không khớp</string>
    <string name="phone_number_already_exists">Số điện thoại đã được đăng ký</string>
    <string name="error">Lỗi</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="forgot_password_question">Quên mật khẩu?</string>
    <string name="cosmetic_cap">MỸ PHẨM</string>
    <string name="treatment_cap">LIỆU TRÌNH</string>
    <string name="news_cap">TIN TỨC</string>
    <string name="best_seller_cap">BÁN CHẠY</string>
    <string name="i_wanna_reg_later">Tôi muốn đăng ký sau</string>
    <string name="cosmetic_detail">Chi tiết sản phẩm</string>
    <string name="spa_s_address">Tầng 1 Shophouse P1 - SH02 Vinhome Central Park</string>
    <string name="spa_s_phone">(+84) 986 910 920 (Zalo)</string>
    <string name="spa_s_phone_2">(+84) 889 130 222</string>
    <string name="minus"> - </string>
    <string name="qty_caps">SỐ LƯỢNG</string>
    <string name="plus"> \+ </string>
    <string name="des_prod">MÔ TẢ SẢN PHẨM</string>
    <string name="call_me">Gọi cho tôi</string>
    <string name="comment">Đánh giá</string>
    <string name="treatment_detail">Chi tiết dịch vụ</string>
    <string name="treament_cap">Chăm sóc da mặt dành cho nam và nữ</string>
    <string name="bookNow">ĐẶT LỊCH NGAY</string>
    <string name="BookInf">Thông tin đặt lịch</string>
    <string name="SelectDate">Chọn ngày</string>
    <string name="selectTime">Chọn giờ</string>
    <string name="ratingAndReViews"><![CDATA[Xếp hạng & Đánh giá]]></string>
    <string name="welcome_customer">Chào bạn, khách</string>
    <string name="save">Lưu</string>
</resources>