<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.auth.RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_with_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_otp_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="8dp"
        android:text="Vui lòng nhập một mật khẩu mạnh để hoàn thành việc đăng ký\nMật khẩu có ít nhất 6 ký tự"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="000000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_otp_description" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <EditText
        android:id="@+id/edtRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryColorDisabled"
        android:fontFamily="@font/quicksand_bold"
        android:paddingVertical="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtRePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>