<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.treatment.TreatmentDetails">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/treatment_detail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llTreatmentDetailAddToCart"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivTreatmentDetail"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_alignParentTop="true"
                android:layout_marginHorizontal="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                app:shapeAppearanceOverlay="@style/Theme.DuAn1.ShapeableOverlay.Rounded" />

            <TextView
                android:id="@+id/tvTreatmentDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivTreatmentDetail"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/treament_cap"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llTreatmentDetailPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTreatmentDetailName"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ticket" />

                <TextView
                    android:id="@+id/tvTreatmentDetailPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Price: 100.000 VND"
                    android:textColor="@color/primaryColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivTreatmentDetailSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTreatmentDetailPrice"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/sun" />

            <LinearLayout
                android:id="@+id/llCongDung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTreatmentDetailPrice"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@id/ivTreatmentDetailSun"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/llTreatmentDetailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llCongDung"
                android:layout_marginHorizontal="16dp"
                android:gravity="top"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/map_marker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/spa_s_address"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTreatmentDetailParentPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTreatmentDetailAddress"
                android:layout_marginHorizontal="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/outgoing_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/spa_s_phone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTreatmentDetailPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spa_s_phone_2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvMoTaSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llTreatmentDetailParentPhone"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="MÔ TẢ LIỆU TRÌNH"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llMoTaLT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMoTaSP"
                android:layout_alignStart="@id/llCongDung"
                android:layout_alignEnd="@+id/llTreatmentDetailParentPhone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llTreatmentDetailAddToCart"
        android:layout_width="match_parent"
        android:layout_height="84sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_detail_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/llCallMeBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:contentDescription="@string/call_me"
                android:scaleType="fitCenter"
                android:src="@drawable/outgoing_call"
                app:tint="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_me"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llComment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:contentDescription="@string/comment"
                android:scaleType="fitCenter"
                android:src="@drawable/comment"
                app:tint="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBookNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="2"
            android:backgroundTint="@color/primaryColor"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tvBookNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:text="@string/bookNow"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>