<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.auth.SendOTPActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_with_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/edtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingHorizontal="8dp"
            android:text="+84"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="123 456 789"
            android:inputType="phone"
            android:maxLength="9"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primaryColorDisabled"
        android:enabled="false"
        android:text="@string/nhan_ma_otp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/edtLayout" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        app:lottie_rawRes="@raw/butterfly"
        app:lottie_speed="2"
        android:visibility="gone"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="@id/btnSend"
        app:layout_constraintEnd_toEndOf="@id/btnSend"
        app:layout_constraintTop_toTopOf="@id/btnSend"
        app:layout_constraintBottom_toBottomOf="@id/btnSend" />

    <TextView
        android:id="@+id/tvNotNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/not_now"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSend" />

</androidx.constraintlayout.widget.ConstraintLayout>