<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.treatment.BookService.BookInformation">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/chevron_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/BookInf"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_above="@+id/llTreatmentDetailAddToCart"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/tvSelectDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/SelectDate"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/cvTreatmentDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSelectDay"
                android:layout_marginTop="0dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/quicksand_bold"
                android:background="#FFF9ED"
                />

            <TextView
                android:id="@+id/tvSelectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvTreatmentDetail"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="Chọn giờ"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSelectTime"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="Sáng"
                android:textColor="#B0ACAC"
                android:textSize="12sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvMorning"
                android:padding="10dp"
                android:visibility="visible"
                tools:listitem="@layout/item_time_slot" />



        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llTreatmentDetailAddToCart"
        android:layout_width="match_parent"
        android:layout_height="137.5sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_detail_bg"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="21.5dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivTreatmentDetailAddToCart"
                android:layout_width="21.5dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/dollar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/ivTreatmentDetailAddToCart"
                android:fontFamily="@font/quicksand_bold"
                android:text="Tổng Thanh Toán"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTreatmentDetailTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="0"
                android:textColor="@color/primaryColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/primaryColor"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/tvBookNow"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingVertical="14dp"
                android:text="TIẾP TỤC"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>
